# sentinel

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/backend/sentinel/: __init__.py  cli.py  main.py
apps/backend/sentinel/api/: routes_cameras.py  routes_events.py  routes_exports.py  routes_health.py  routes_settings.py
apps/backend/sentinel/camera/: base.py  health.py  onvif.py  opencv_cam.py  rtsp.py
apps/backend/sentinel/config/: defaults.py  migrate.py  schema.py
apps/backend/sentinel/ml/: __init__.py  dataset.py  manifest.py  reproducibility.py  runners.py
apps/backend/sentinel/modules/: __init__.py  range_estimator.py
apps/backend/sentinel/pipeline/: events.py  recorder.py  runtime.py
apps/backend/sentinel/storage/: db.py  export.py  models.py  repo.py  retention.py
apps/backend/tests/: fake_camera.py  test_benchmark_guards.py  test_camera_detector_arming.py  test_camera_id_security.py  test_cli.py  test_container_security_defaults.py  test_convergence_contract.py  test_defaults.py  test_detector_stack.py  test_events.py  test_export_paths.py  test_main_path_security.py  test_range_estimator.py  test_redaction.py  test_retention.py  test_rtsp_validation.py  test_runtime_shutdown.py  test_settings_exit.py  test_settings_operating_mode.py  test_single_runtime_constraints.py  test_startup_and_stream.py  test_tracker_memory.py  test_webcam_discovery.py
apps/frontend/: .eslintrc.cjs  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
apps/frontend/src/: app.tsx  main.tsx  styles.css
assets/: logo_placeholder.txt
docs_public/: architecture.md  camera_setup.md  convergence_integration.md  data_model.md  detector_profiles.md  edge_cases.md  model_licensing.md  performance.md  range_estimation.md  scaling_and_hardening_roadmap.md  train.md
scripts/: benchmark_detector.py  dev.ps1  dev.sh
(+27 files in other folders)
